Fixed grid view height calculation - no more double scrollbars. Fixed splash overflow issue - no more scrollbars while splash is visible on page loading. No more cache delete needed when config for horizontal/vertical menu changed.

--- a/public/css/elix_view.css
+++ b/public/css/elix_view.css
@@ -1560,7 +1560,7 @@ a.header-filter:hover {
 
 .dx-grid-container {
 	position: relative;
-	height: calc(100% - 49px - 22px - 20px);
+	/*height: calc(100% - 49px - 22px - 20px);*/
 	background-color: white;
 	margin-bottom: 20px;
 	overflow: hidden;
